--- a/pages/booknow.html
+++ b/pages/booknow.html
@@ -244,6 +244,9 @@
             font-size: 3vw;
             margin-top: 5%;
             margin-bottom: 5%;
+            padding-left: 1%;
+            padding-right: 1%;
+            font-family: 'Playfair Display', serif;
         }
         .preface {
             font-family: 'Playfair Display', serif;
@@ -364,6 +367,24 @@
         }
 
 
+        .button2 {
+    font-family: 'Playfair Display', sans-serif;
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: #112F24;
+    background-color: transparent;
+    border: none;
+    border-bottom: 2px solid #112F24;
+    padding: 1rem;
+    transition: all 0.3s;
+    margin: 1rem;
+}
+
+.button2:hover {
+    color: white;
+    background-color: #112F24;
+}
+
 
     </style>
 </head>
@@ -455,7 +476,7 @@
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" style="font-family: 'Noto Sans';"></textarea>
                   </div>
              
-                  <input type="submit" onClick="submit()" Value="BOOK" class="bookbtn big">
+                  <input type="submit" onClick="submit()" Value="Book" class="button2">
             </div>
         </div>
     </div>
