[Brandon] Minor Fixes

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         body {
             font-family: 'Noto Sans', sans-serif;
-            font-weight: 200;
+            font-weight: 300;
             background-color: white;
             margin: 0;
             padding: 0;
@@ -143,7 +143,6 @@
 
         .herotext {
             font-family: 'Noto Sans', sans-serif;
-            font-weight: 300;
             font-size: 1.25rem;
             color: white;
             margin-left: 20%;
@@ -337,7 +336,7 @@
             text-decoration-line: underline;
             text-decoration-thickness: 1px;
             transition: 0.3s ease-in-out;
-            font-size: 1.2rem;
+            font-size: 1.25rem;
         }
 
         .planmoredetails:hover {
@@ -412,18 +411,12 @@
                 display: none;
             }
         }
+
         h2 {
-            font-size: 3rem;
+            font-size: 2rem;
             font-weight: 400;
             margin: 0;
         }
-        .mt-2 {
-            font-size: 1.5rem;
-        }
-        .mt-5 {
-            font-size: 1.5rem;
-        }
-
     </style>
 </head>
 
@@ -457,7 +450,7 @@
             <h1 class="herotitle">
                 Everything you need for travel
             </h1>
-            <p class="pt-4 herotext text-start">
+            <p class="pt-4 herotext text-center">
                 We provide everything you need to travel overseas during COVID-19 pandemic. With continuously checking the latest regulations in every country, we ensure our services comply with the requirements. Also, we guarantee our prices to be the best in Singapore, and even better discounts are available for group bookings.
             </p>
             <a href="./pages/booknow.html">
@@ -476,22 +469,21 @@
         <div class="row text-center mt-5 gy-4">
             <div class="col-lg-4 col-md-12 p-3">
                 <i class="fa-regular fa-clock fa-6x"></i>
-                <h2 class="mt-4">Fast</h2>
+                <h2 class="mt-4" style="font-weight: 700">Fast</h2>
                 <p class="mt-2">
-                    Get your result within <b>24 hrs
-                    </p></b> 
+                    Get your result within <b>24 hrs </b>
+                </p> 
             </div>
             <div class="col-lg-4 col-md-12 p-3">
                 <i class="fa-solid fa-globe fa-6x"></i>
-                <h2 class="mt-4">Valid</h2>
+                <h2 class="mt-4" style="font-weight: 700">Valid</h2>
                 <p class="mt-2">
-                    We assure you the validity of our results
-                    <br> in sync with up-to-date <b>border info</b>
+                    We assure you the validity of our results in sync with up-to-date <b>border info</b>
                 </p>
             </div>
             <div class="col-lg-4 col-md-12 p-3">
                 <i class="fa-solid fa-arrow-trend-down fa-6x"></i>
-                <h2 class="mt-4">Low-Cost</h2>
+                <h2 class="mt-4" style="font-weight: 700">Low-Cost</h2>
                 <p class="mt-2">
                     We offer you the <b>lowest price</b> aross the island
                 </p>
@@ -522,20 +514,20 @@
                     <div class="w-100 text-center d-flex flex-column justify-content-center" style="aspect-ratio: 1 / 1; background-color: #41B188; border-radius: 50%;">
                         <i class="fa-solid fa-syringe fa-4x" style="color: white"></i>
                     </div>
-                    <p class="text-center mt-3">Serology Test</p>
+                    <p class="text-center mt-3" style="font-size: 1.5rem;">Serology Test</p>
                 </div>
                 <div class="col-lg-4 col-md-12 display-6 text-center"> + </div>
                 <div class="col-lg-4 col-md-12">
                     <div class="w-100 text-center d-flex flex-column justify-content-center" style="aspect-ratio: 1 / 1; background-color: #41B188; border-radius: 50%;">
                         <i class="fa-solid fa-vial fa-4x" style="color: white"></i>
                     </div>
-                    <p class="text-center mt-3">PCR Test</p>
+                    <p class="text-center mt-3" style="font-size: 1.5rem;">PCR Test</p>
                 </div>
             </div>
 
             <div class="mt-5 text-center">
-                <div id="detailsline2">Results within 24 hours</div>
-                <div id="detailsline3">Express Delivery</div>
+                <div id="detailsline2" style="font-size: 1.25rem;">Results within 24 hours</div>
+                <div id="detailsline3" style="font-size: 1.25rem;">Express Delivery</div>
             </div>
 
             <!--Plan details-->
@@ -580,8 +572,8 @@
 
         <div class="w-75 p-4 mx-auto my-5" style="background-color:#41B188; color: white;">
             <div class="row align-items-center">
-                <div class="col-lg-5 col-md-12 py-2">
-                    <b style="font-size: 2rem;">Select your destination</b> 
+                <div class="col-lg-5 col-md-12 py-2" style="font-size: 1.25rem; font-weight: 400;">
+                    Select your destination 
                 </div>
                 <div class="col-lg-7 col-md-12 py-2">
                     <div class="row dropdownrow">
@@ -623,8 +615,8 @@
             </div>
             <hr>
             <div class="row align-items-center">
-                <div class="col-lg-5 col-md-12 py-2">
-                    <b style="font-size: 2rem;">Number of people</b> 
+                <div class="col-lg-5 col-md-12 py-2" style="font-size: 1.25rem; font-weight: 400;">
+                    Number of people
                 </div>
                 <div class="col-lg-7 col-md-12 py-2">
                     <div class="row mx-auto align-items-center">
@@ -730,7 +722,7 @@
         <h1 style="font-size: 4rem;">
             Got Questions?
         </h1>
-        <p>
+        <p style="font-size: 1.25rem;">
             Get in touch with us by sending an enquiry and our team will be glad to help.
         </p>
         <a href="./pages/contact-us.html">
