--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -222,7 +222,7 @@
         <h1 style="font-size: 4rem;">
             Still Got Questions?
         </h1>
-        <p>
+        <p style="font-size: 1.25rem; font-weight: 300">
             Get in touch with us by sending an enquiry and our team will be glad to help.
         </p>
         <a href="./pages/contact-us.html">
