--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -53,12 +53,14 @@
             <h1 style="text-transform: uppercase; font-size: 4rem; line-height: 3.5rem;">
                 Auro<span style="letter-spacing: 5px;">ra</span> Medical
             </h1>
-            <p class="pt-4 text-start">
+            <p class="pt-4 text-center" style="font-size: 1.25rem;">
                 We are a leading medical company that puts our customers first, always, and is on the forefront of medical innovation, which allows us to provide the best prices for our customers. We have large branches scattered all across Asia, more specifically in our hub in Singapore, to allow any traveler the most convenient location for their choice of PCR test. Rendering pivotal medical services during the most critical moments, we always put our clients first at the core of our healthcare ecosystem. We leverage and combine both innovation and technology to offer the most affordable and progressive medical services to our most honored clients. We have obtained numerous accolades and awards in the field of Covid-19 tests and can ensure that our Covid-19 tests are the most authentic and verified.
             </p>
-            <button class="button mt-5">
-                Contact Us
-            </button>
+            <a href="./contact-us.html">
+                <button class="button mt-5">
+                    Contact Us
+                </button>
+            </a>
         </div>
     </section>
 
@@ -117,9 +119,8 @@
             Our Team
         </h1>
         <hr style="width: 50px; color: white; opacity: 1; border-top: 1.5px solid; margin: 1.5rem 0;" class="mx-auto">
-        <p style="width: 50%; text-align: justify;" class="mx-auto text">
-            We provide our service supported by our efficient <b>management</b> and dedicated <b>research</b>. All known experts in their fields, we leverage our innovativeness to provide the best price.
-
+        <p style="width: 75%; text-align: justify; font-size: 1.25rem" class="mx-auto text-center">
+            We provide our service supported by our efficient <b>management</b> and dedicated <b>research</b>. <br> All known experts in their fields, we leverage our innovativeness to provide the best price.
         </p>
         <div class="row w-75 mx-auto" style="margin-top: 2rem">
             <div class="col-lg-4 col-md-12 py-5">
@@ -182,7 +183,7 @@
             Our Achievements
         </h1>
         <hr style="width: 50px; color: #112F24; opacity: 1; border-top: 1.5px solid; margin: 1.5rem 0;" class="mx-auto">
-        <p style="width: 50%; text-align: justify;" class="mx-auto text-start">
+        <p style="width: 75%; text-align: justify; font-size: 1.25rem" class="mx-auto text-center">
             We have accolades in the medical industry due to our strong expertise and experience we displayed through the Covid-19 pandemic, and we are the number 1 trusted provider for the most affordable Covid-19 testing services.
         </p>
         <div class="row w-75 mx-auto gx-5" style="margin-top: 2rem">
