changed some phrasing

--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
     <!--Country selection Title-->
     <div class="container-fluid countrycontainer" id="package-recommendation">
         <h1 style="font-size: 3rem;" class="text-center">
-            Get curated plan for your destination
+            Get a curated plan for your destination
         </h1>
         <!--Box for recommended Plan-->
         <div class="recommplancontainer w-75 my-5 mx-auto" style="color: #112F24;">
@@ -532,7 +532,7 @@
 
             <!--Plan details-->
             <div class="row planmoredetailsrow text-center mt-5">
-                <div class="col"><a href="./pages/countries.html" target="_blank" class="planmoredetails">See the restrictions of your chosen country</a>
+                <div class="col"><a href="./pages/countries.html" target="_blank" class="planmoredetails">See restrictions of your destination</a>
                     <svg xmlns="http://www.w3.org/2000/svg" width="0.9rem" height="0.9rem" fill="currentColor"
                         class="bi bi-arrow-up-right" viewBox="0 0 16 16" style="color:#333333;">
                         <path fill-rule="evenodd"
