--- a/pages/countries.html
+++ b/pages/countries.html
@@ -349,7 +349,7 @@
     <!-- navbar -->
     <nav class="container-fluid d-flex justify-content-between align-items-center p-3 flex-wrap position-fixed" style="z-index: 10000; background-color: white" id="navbar">
         <div>
-            <a href="index.html">
+            <a href="../index.html">
                 <h1 style="font-size: 2rem; font-weight: 400; color: #41B188">
                     Aurora <span style="color: #333333">Medical</span>
                 </h1>
