changed some shit

--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -51,7 +51,7 @@
     <section class="hero-banner container-fluid d-flex align-items-center justify-content-center">
         <div class="text-center">
             <h1 style="font-size: 4rem;">
-                We are here to hear from you
+                We're here for you
             </h1>
             <p class="pt-4" style="font-size: 1.25rem">
                 Whether you're curious about our packages, services or wish to book a test <br> <b>We are here for any and all of your needs</b>
