--- a/pages/products.html
+++ b/pages/products.html
@@ -123,7 +123,7 @@
         font-size: 1rem;
     }
     .hero-banner {
-    min-height: 60vh;
+    height:30vw;
     background-image: url('../assets/images/services_hero.jpg');
     background-size: cover;
     background-repeat: no-repeat;
