--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -50,7 +50,7 @@
     <!-- Hero Banner -->
     <section class="hero-banner container-fluid d-flex align-items-center justify-content-center">
         <div class="text-center">
-            <h1 style="font-size: 4rem;">
+            <h1 style="font-size: 4rem; font-weight: 500;">
                 We're here for you
             </h1>
             <p class="pt-4" style="font-size: 1.25rem">
@@ -84,7 +84,7 @@
                             Find all frequently asked questions here
                         </p>
                         <button class="button mt-5 position-absolute" style="width: 6rem; left: 50%; bottom: 3rem; transform: translateX(-50%);">
-                            Check
+                            Go
                         </button>
                     </div>
                 </a>
@@ -102,7 +102,7 @@
                             Find the best fit for you within clicks
                         </p>
                         <button class="button mt-5 position-absolute" style="width: 6rem; left: 50%; bottom: 3rem; transform: translateX(-50%);">
-                            Check
+                            Go
                         </button>
                     </div>
                 </a>
@@ -120,7 +120,7 @@
                             Get up-to-date regularion info of your destination
                         </p>
                         <button class="button mt-5 position-absolute" style="width: 6rem; left: 50%; bottom: 3rem; transform: translateX(-50%);">
-                            Check
+                            Go
                         </button>
                     </div>
                 </a>
