--- a/pages/countries.html
+++ b/pages/countries.html
@@ -372,7 +372,7 @@
     <!-- Hero Banner -->
     <section class="hero-banner container-fluid d-flex justify-content-center align-items-center">
         <div class="text-center">
-            <h1 style="text-transform: uppercase; font-size: 4rem; line-height: 3.5rem; font-family: 'Playfair Display', serif;">
+            <h1 style=" font-size: 4rem; line-height: 3.5rem; font-family: 'Playfair Display', serif;">
                 Country Restrictions
             </h1>
             <p class="pt-4 text-center">
