--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -29,7 +29,7 @@
         <div>
             <a href="../index.html">
                 <h1 style="font-size: 2rem; font-weight: 400; color: #41B188">
-                    Aurora <span style="color: #333333">Medical</span>
+                    Aurora<span style="color: #333333">Medical</span>
                 </h1>
             </a>
         </div>
@@ -64,11 +64,11 @@
 
     <!-- Quick Links Section -->
     <section class="quick-links container-fluid">
-        <h1 style="text-transform: uppercase; font-size: 3rem;" class="text-center">
+        <h1 style="font-size: 3rem;" class="text-center">
             Need Help?
         </h1>
-        <h1 class="text-center" style="font-size: 1.5rem">
-            Check out the helpers below
+        <h1 class="text-center" style="font-size: 1.5rem;">
+             <span style="font-family: 'Noto Sans', sans-serif; font-weight: 300;">Check out the quick links below</span>
         </h1> 
         <div class="row w-100 mx-auto gx-5" style="margin-top: 3rem ">
             <div class="col-lg-4 col-md-12 py-5">
@@ -81,7 +81,7 @@
                             FAQ
                         </h2>
                         <p class="text-center" style="font-weight: 300">
-                            Find all frequently asked questions here
+                            Find all your Frequently Asked Questions here, from testing details to clinic procedures
                         </p>
                         <button class="button mt-5 position-absolute" style="width: 6rem; left: 50%; bottom: 3rem; transform: translateX(-50%);">
                             Go
@@ -99,7 +99,7 @@
                             Find Packages
                         </h2>
                         <p class="text-center" style="font-weight: 300">
-                            Find the best fit for you within clicks
+                            Find the best package for your destination
                         </p>
                         <button class="button mt-5 position-absolute" style="width: 6rem; left: 50%; bottom: 3rem; transform: translateX(-50%);">
                             Go
@@ -117,7 +117,7 @@
                             Border Info
                         </h2>
                         <p class="text-center" style="font-weight: 300">
-                            Get up-to-date regularion info of your destination
+                            Get up-to-date COVID-19 regulations of your destination
                         </p>
                         <button class="button mt-5 position-absolute" style="width: 6rem; left: 50%; bottom: 3rem; transform: translateX(-50%);">
                             Go
@@ -135,18 +135,18 @@
         <div class="row w-100 h-100 gy-4">
             <div class="col-md-12 col-lg-4 d-flex flex-column justify-content-between pe-4">
                 <div class="text-heading">
-                    <h1 style="font-size: 1.5rem;">
+                    <h1 style="font-size: 2.5rem;">
                         Wanna
                     </h1>
                     <h1 style="font-size: 2.5rem" class="mb-4">
-                        Drop us a message?
+                        drop us a message?
                     </h1> 
                     <p>
-                        <b> No Problem! </b> Simply tell us about your concern by filling up this simple form >
+                        Tell us your concerns by filling up this simple form
                     </p>
                 </div>
                 <p>
-                    Wonder how your paticulars will be used? <br> Checkout our <b style="text-decoration: underline"> <a href="./pdpc.html" style="color: #112F24;">Privacy Policy</a> </b>
+                    Wonder how your paticulars will be used? <br> Checkout our <b style="text-decoration: underline"> <a href="./pdpc.html" style="color: #333333;">Privacy Policy</a> </b>
                 </p>
             </div>
             <div class="col-md-12 col-lg-8" style="padding: 3rem; background-color: #FEBB60">
@@ -225,9 +225,9 @@
     <section class="contact-info container-fluid" id="contact-info">
         <div class="row">
             <div class="col-lg-4 col-md-12" id="map" style="height: 40rem; padding: 0;">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d120475.64416777474!2d103.81160184370414!3d1.3355505084898236!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2ssg!4v1668307767730!5m2!1sen!2ssg" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9835.581773909938!2d103.67823714934912!3d1.3422982022526893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da0f75f1b46c61%3A0x9bc89e72d25f4d5f!2s21%20Nanyang%20Link%2C%20School%20of%20Physical%20and%20Mathematical%20Sciences%2C%20Singapore%20637371!5e0!3m2!1sen!2ssg!4v1668322621256!5m2!1sen!2ssg" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            <div class="col-lg-4 col-md-6 d-flex flex-column" style="background-color: #112F24; padding: 2rem 3rem; height: 40rem;">
+            <div class="col-lg-4 col-md-6 d-flex flex-column" style="background-color: #333333; padding: 2rem 3rem; height: 40rem;">
                 <div style="flex: 2;" class="d-flex flex-column justify-content-center">
                     <h1 style="font-size: 3rem; color: white; text-transform: uppercase;">
                         Meet Us
@@ -241,15 +241,15 @@
             </div>
             <div class="col-lg-4 col-md-6 d-flex flex-column" style="background-color: #EBFFF8; padding: 2rem 3rem; height: 40rem;">
                 <div style="flex: 2;" class="d-flex flex-column justify-content-center">
-                    <h1 style="font-size: 3rem; color: #112F24; text-transform: uppercase;">
+                    <h1 style="font-size: 3rem; color: #333333; text-transform: uppercase;">
                         Ping Us
                     </h1>
                 </div>
                 <div style="flex: 1;" class="d-flex flex-column justify-content-center">
-                    <p style="color: #112F24; font-size: 1rem; margin: 0;">
+                    <p style="color: #333333; font-size: 1rem; margin: 0;">
                         <span class="material-symbols-outlined"> call </span> +65 8052 8564
                     </p>
-                    <p style="color: #112F24; font-size: 1rem;">
+                    <p style="color: #333333; font-size: 1rem;">
                         <span class="material-symbols-outlined"> mail </span> aurora@aurora.sg
                     </p>
                 </div>
