contact us formatted

--- a/pages/booknow.html
+++ b/pages/booknow.html
@@ -486,7 +486,7 @@
         <p style="font-family: 'Noto Sans', sans-serif; font-weight: 300; margin-top: 0%;">
             We are here to help you. Contact us for any burning doubts or questions!
         </p>
-        <a href="./pages/contact-us.html">
+        <a href="contact-us.html">
             <button class="button mt-5" id="slide-to-form-btn">
                 Contact Us
             </button>
