--- a/pages/products.html
+++ b/pages/products.html
@@ -94,6 +94,7 @@
             margin: 0 auto;
             width: 18rem;
             min-height: 25rem;
+            height: 30rem;
         }
 
         .secondrow {
