Updated broken links for buttons in products.html

--- a/pages/products.html
+++ b/pages/products.html
@@ -214,7 +214,7 @@
                             <h5 class="card-title">PCR Test</h5>
                             <p class="card-text">Polymerase Chain Reaction (PCR) Test, the most accurate test for
                                 COVID-19.</p>
-                            <a href="#">
+                            <a href="./pcr.html">
                                 <button class="button mt-5" id="slide-to-form-btn">
                                     Learn More
                                 </button>
@@ -229,7 +229,7 @@
                             <h5 class="card-title">Supervised ART</h5>
                             <p class="card-text">Supervised Antigen Rapid Testing, the most convenient and flexible test
                                 for testing from the comfort of your home.</p>
-                            <a href="#">
+                            <a href="./sart.html">
                                 <button class="button mt-5" id="slide-to-form-btn">
                                     Learn More
                                 </button>
@@ -244,7 +244,7 @@
                             <h5 class="card-title">Mobile Departure Swab Test</h5>
                             <p class="card-text">A mobile departure swab test combines both the reliability of a PCR and
                                 the convenience of a SART into one.</p>
-                            <a href="#">
+                            <a href="./mobile.html">
                                 <button class="button mt-5" id="slide-to-form-btn">
                                     Learn More
                                 </button>
@@ -261,7 +261,7 @@
                             <h5 class="card-title">Serology / IGM Test</h5>
                             <p class="card-text">A serology test detects the presence of previous antibodies to find out
                                 if your vaccines are working or your body is recovering.</p>
-                            <a href="#">
+                            <a href="./igm.html">
                                 <button class="button mt-5" id="slide-to-form-btn">
                                     Learn more
                                 </button>
@@ -276,7 +276,7 @@
                             <h5 class="card-title">Bundles</h5>
                             <p class="card-text">Check out the bundles we offer for travel to specific countries for the
                                 best deals!</p>
-                            <a href="#">
+                            <a href="./countries.html">
                                 <button class="button mt-5" id="slide-to-form-btn">
                                     Learn more
                                 </button>
@@ -290,7 +290,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Book Now</h5>
                             <p class="card-text">I know what I want to purchase, let me book my test now!</p>
-                            <a href="#">
+                            <a href="./booknow.html">
                                 <button class="button mt-5" id="slide-to-form-btn">
                                     Book Now
                                 </button>
