FAQ all formatted

--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -89,13 +89,13 @@
         </div>
     </div>
     <!-- FAQ boxes-->
-    <div class="faq_box">
+    <div class="faq_box" style="font-family: 'Noto Sans', sans-serif; font-weight: 300; ">
         <div class="group_1">
-            <div class="accordion" id="accordionExample_1">
+            <div class="accordion" id="accordionExample_1" >
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                             What are the available timings for home-based pre-departure PCR test?
                         </button>
                     </h2>
@@ -133,7 +133,7 @@
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        <button class="accordion-button collapsed " type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                             What happens if the test results are inconclusive?
                         </button>
@@ -225,7 +225,7 @@
         <p style="font-size: 1.25rem; font-weight: 300">
             Get in touch with us by sending an enquiry and our team will be glad to help.
         </p>
-        <a href="./pages/contact-us.html">
+        <a href="../pages/contact-us.html">
             <button class="button mt-5" id="slide-to-form-btn">
                 Contact Us
             </button>
